# vonavy_agent

./: .dockerignore  .gitignore  Dockerfile.forecast-batch  Dockerfile.validation-batch  Dockerfile.validation-worker  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
docs/: phase-0-cloud-boundaries.md  phase-1-serverless-control-plane.md  phase-2a-validation-worker.md  phase-2b-aws-validation.md  phase-6-agent-experience.md  phase-6-domain-cutover.md  release-hardening.md
infra/: .gitignore  README.md  app.py  cdk.context.json  cdk.json  package-lock.json  package.json  pyproject.toml
infra/lambda/control_plane/: handler.py
infra/lambda/forecast_control_plane/: agent.py  agent_async.py  handler.py  orchestrator.py
infra/tests/: phase5_api_client_smoke.mjs  phase6_agent_experience_smoke.mjs  test_agent_message_layout.py  test_forecast_agent.py  test_forecast_handler.py  test_forecast_orchestrator.py  test_handler.py  test_phase4_agentic_sources.py  test_phase4b_model_selection.py  test_phase4c_preprocessing_plan.py  test_phase4c_sources.py  test_phase4d_result_review.py  test_phase4d_sources.py  test_phase5_release_hardening.py  test_phase6_agent_experience.py  test_phase6_custom_domain.py  test_stack.py
infra/vonavy_infra/: __init__.py  control_plane_stack.py
infra/web/: app.js  index.html  styles.css
ops/: EXECUTOR_BOOTSTRAP_PROMPT.md  PHASE1_EXECUTOR_PROMPT.md  README.md  account-bootstrap.md  aurora-cost-cleanup.md  aws-agent-toolkit-hardening.md  executor-contract.md  gpu-quotas.md  phase-1-synth-and-review.md  phase-2b-synth-and-review.md
src/vonavy_agent/: __init__.py  __main__.py  adapters.py  api.py  backtest.py  cli.py  datasets.py  domain.py  eligibility.py  errors.py  executor.py  experiments.py  exporting.py  hashing.py  identity.py  jobs.py  managed_files.py  persistence.py  (+5 more)
tests/: conftest.py  test_api.py  test_blocker_regressions.py  test_chronos2_forecasting.py  test_dataset_and_gate.py  test_final_review_regressions.py  test_forecast_container_build.py  test_forecasting.py  test_last_delta_regressions.py  test_neuralnet_forecasting.py  test_phase0_cloud_boundaries.py  test_phase4d_evaluation.py  test_runner_planner_export.py  test_terminal_bundle_regressions.py  test_validation_aws.py  test_validation_cli.py  test_validation_container.py  test_validation_contracts.py  test_validation_worker.py
(+23 files in other folders)
