[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "vonavy-agent"
version = "0.2.0"
description = "Local leakage-safe forecasting experiment workbench"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "alembic>=1.14,<2",
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "numpy>=2.1,<3",
  "pandas>=2.2,<3",
  "pyarrow>=18,<24",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "python-multipart>=0.0.20,<1",
  "scikit-learn>=1.6,<2",
  "sqlalchemy>=2.0,<3",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.14,<2",
  "pandas-stubs>=2.2,<3",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
]

[project.scripts]
vonavy-agent = "vonavy_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vonavy_agent"]

[tool.hatch.build]
include = [
  "src/vonavy_agent/**/*.py",
  "src/vonavy_agent/web/*",
  "src/vonavy_agent/report/*",
  "src/vonavy_agent/migrations/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
strict = true
packages = ["vonavy_agent"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["sklearn.*", "pyarrow.*"]
ignore_missing_imports = true
